--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
             background: black;
         }
     </style>
+    <!-- <script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script> -->
+    <script>
+        // new VConsole();
+    </script>
 </head>
 
 <body>
